# hermelinChat

./: .gitignore  LICENSE  README.md  hermes-agent-modellist.txt  hermilin_chat_architecture.md  hermilin_interface_mockup.jsx  matrix_effect.js  mockup-v2.jsx  pyproject.toml
examples/: SOUL_artifact_guidance.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
hermelin/: __init__.py  __main__.py  artifacts.py  auth.py  config.py  config_editor.py  dashboard_proxy.py  dashboard_themes.py  default_artifacts.py  hermes_dashboard.py  meta_db.py  pty_handler.py  runners.py  security.py  server.py  state_reader.py  ws_writer.py
scripts/: hermes_with_addons.py  install.sh  install_autotitle_cronjob.py  install_hermes_artifact_patch.py  install_hermes_banner_video_patch.py  install_hermes_skins.py  install_hermes_themes.py  install_video_pack.py  install_whispers_cronjob.py  python_venv_hint.sh  seed_video_history.py  uninstall.sh  uninstall_hermelin_cronjobs.py  uninstall_hermes_artifact_patch.py  uninstall_hermes_banner_video_patch.py  uninstall_hermilin_cronjobs.py  uninstall_video_pack.py  update.sh
skins/: hermelin.yaml  hermilin.yaml  matrix.yaml  nous.yaml  samaritan.yaml
tests/: test_artifact_actions.py  test_artifact_cache.py  test_artifact_route_security.py  test_dashboard_theme_sync.py  test_default_artifact_settings.py  test_default_artifacts.py  test_display_skin_config_update.py  test_hermes_dashboard_proxy.py  test_hermes_tui_mode.py  test_pet_overlay.py  test_python_venv_hint.py  test_security.py  (+6 more)
(+112 files in other folders)
