[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hermelin-chat"
version = "0.14"
description = "Web UI for Hermes Agent (PTY terminal + session sidebar)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "aiofiles>=23.2.1",
  "argon2-cffi>=23.1.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0",
  "websockets>=12.0",
]

[project.scripts]
hermelin = "hermelin.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["hermelin"]

[tool.hatch.build]
# Include built frontend when present
include = [
  "hermelin/static/**/*",
]
